--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
-        "illuminate/support": "^10.0 || ^11.0 || ^12.0"
+        "illuminate/support": "^10.0 || ^11.0 || ^12.0",
+        "spatie/laravel-package-tools": "^1.92"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
@@ -28,7 +29,8 @@
         "laravel/pint": "^1.27",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.8",
-        "phpunit/phpunit": "^12.5"
+        "phpunit/phpunit": "^12.5",
+        "orchestra/testbench": "^10.8"
     },
     "autoload": {
         "psr-4": {
