--- a/package.json
+++ b/package.json
@@ -5,27 +5,36 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write \"**/*.{js,ts,vue,jsx,tsx,json,md,css,scss,html}\""
     },
     "dependencies": {
-        "@inertiajs/vue3": "^2.3.6",
+        "@inertiajs/vue3": "^2.0.0",
         "@mdi/font": "^7.4.47",
         "roboto-fontface": "^0.10.0",
         "vue": "^3.4.0",
         "vuedraggable": "^4.1.0",
-        "vuetify": "^3.10.0"
+        "vuetify": "^3.5.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.39.2",
         "@vitejs/plugin-vue": "^6.0.1",
         "axios": "^1.12.2",
+        "eslint": "^9.39.2",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-vue": "^10.6.2",
+        "globals": "^17.0.0",
         "laravel-vite-plugin": "^2.0.1",
+        "prettier": "^3.7.4",
         "sass": "^1.69.0",
         "vite": "^7.1.5",
         "vite-plugin-vuetify": "^2.0.0"
     },
     "peerDependencies": {
-        "@inertiajs/vue3": ">=1.0.0",
-        "vue": ">=3.4.0",
-        "vuetify": ">=3.5.0"
+        "@inertiajs/vue3": "^2.0.0",
+        "vue": "^3.4.0",
+        "vuetify": "^3.5.0"
     }
 }
