--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "illuminate/support": "^10.0 || ^11.0 || ^12.0",
-        "spatie/laravel-package-tools": "^1.92"
+        "spatie/laravel-package-tools": "^1.92",
+        "spatie/laravel-data": "^4.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
