--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "inertiajs/inertia-laravel": "^2.0",
         "illuminate/support": "^10.0 || ^11.0 || ^12.0",
         "spatie/laravel-package-tools": "^1.92",
-        "spatie/laravel-data": "^4.18"
+        "spatie/laravel-data": "^4.18",
+        "tightenco/ziggy": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
