--- a/package.json
+++ b/package.json
@@ -12,29 +12,34 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
-        "@mdi/font": "^7.4.47",
-        "roboto-fontface": "^0.10.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.562.0",
+        "radix-vue": "^1.9.17",
+        "tailwind-merge": "^3.4.0",
         "vue": "^3.4.0",
-        "vuedraggable": "^4.1.0",
-        "vuetify": "^3.5.0"
+        "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
+        "@tailwindcss/postcss": "^4.1.18",
         "@vitejs/plugin-vue": "^6.0.1",
+        "autoprefixer": "^10.4.23",
         "axios": "^1.12.2",
         "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-vue": "^10.6.2",
         "globals": "^17.0.0",
         "laravel-vite-plugin": "^2.0.1",
+        "postcss": "^8.5.6",
         "prettier": "^3.7.4",
         "sass": "^1.69.0",
+        "tailwindcss": "^4.1.18",
         "vite": "^7.1.5",
-        "vite-plugin-vuetify": "^2.0.0"
+        "ziggy-js": "^2.6.0"
     },
     "peerDependencies": {
         "@inertiajs/vue3": "^2.0.0",
-        "vue": "^3.4.0",
-        "vuetify": "^3.5.0"
+        "vue": "^3.4.0"
     }
 }
