--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
         "@eslint/js": "^9.39.2",
         "@tailwindcss/postcss": "^4.1.18",
         "@vitejs/plugin-vue": "^6.0.1",
+        "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.23",
         "axios": "^1.12.2",
         "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-vue": "^10.6.2",
         "globals": "^17.0.0",
+        "jsdom": "^27.4.0",
         "laravel-vite-plugin": "^2.0.1",
         "postcss": "^8.5.6",
         "prettier": "^3.7.4",
         "sass": "^1.69.0",
         "tailwindcss": "^4.1.18",
         "vite": "^7.1.5",
+        "vitest": "^4.0.17",
         "ziggy-js": "^2.6.0"
     },
     "peerDependencies": {
