chore: Add test script to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
+        "test": "vitest",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write \"**/*.{js,ts,vue,jsx,tsx,json,md,css,scss,html}\""
